# client-server-qt

./: .gitignore  README.md
Client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Server/: CMakeLists.txt  main.cpp  server.cpp  server.h
